# layout-pdf-extraction

./: README.md  main.py  requirements.txt  setup.cfg  setup.py
Data/: main_old.py  marker_old.py
Data/Destination Path/2022_Apple_ESG_Report/: 2022_Apple_ESG_Report.md  2022_Apple_ESG_Report_meta.json
Data/Destination Path/FY2023-NVIDIA-Corporate-Responsibility-Report-1/: FY2023-NVIDIA-Corporate-Responsibility-Report-1.md  FY2023-NVIDIA-Corporate-Responsibility-Report-1_meta.json
pdfparser/: exception.py  utils.py
pdfparser/abstract_class_pdf_parser/: abstract_strcture.py
pdfparser/marker/: marker_pdf.py
