# inside setup.cfg:

[metadata]
name = pdfparser
version = 0.2
author = Pranshu Chaurasia
author_email = youremail@email.com
description = Pdf-Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows

[options]
packages = find:

[options.packages.find]
include = pdfparser